@@ -172,7 +172,27 @@ Unified sprites should be defined as if all its parts are 16×16 in size with th
 
 A unified sprite is like a big version of an individual 16×16 sprite controlled by the anchor.
 
--en sprite navigator mostrar bien tipo composite/unified (definido cuando es anchor, no cuando es relativo)
+
+-sprite disabling window tambien para tsconf y maquinas con chip vdp (msx, etc)
+
+-
+    cls_menu_overlay();
+
+    //En caso de menus tabulados, es responsabilidad de este de liberar ventana
+    zxvision_destroy_window(&ventana);  
+
+
+esos, debe haber cls antes siempre
+
+
+
+- zona sprites tbblue como memory zone. patterns tambien. uso de esos creo que ya esta
+
+
+-Función que restaura geometría ventanas, si en la config se define una ventana con nombre desconocido, 
+que muestre error pero siga adelante, para así que en el futuro si se elimina alguna ventana, 
+si alguien la restauraba por config, que salga aviso (o no) y que pueda seguir usando la config. 
+Al guardar la config, la que no existe no debería guardarse (ya no deberá estar en memoria en principio)
 
 
 -changelog llega al maximo que puede mostrar el visor en menu cuando hay update (64000 bytes)
